[package]
name = "aos"
version = "0.19.9-alpha-aos-demo"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 1
#incremental = true

[profile.release]
codegen-units = 1
# opt-level = 3
lto = true

[profile.wasm-release]
inherits = "release"
# codegen-units = 1
# opt-level = 3
# lto = true

[dependencies]
# recommended - use the latest version tag and test against an instance that supports the same version
# lemmy_api_common = { tag = "0.19.5", git = "https://github.com/LemmyNet/lemmy.git", default-features = false }

# test against unstable main dev branch of Lemmy
# lemmy_api_common = { branch = "main", git = "https://github.com/LemmyNet/lemmy.git", default-features = false }

# for testing potential lemmy changes
# lemmy_api_common = { path = "../lemmy/crates/api_common", default-features = false }
lemmy_api_common = { branch = "deploy_demo", git = "https://github.com/jim-taylor-business/lemmy.git", default-features = false }
# lemmy_api_common_latest = { tag = "0.19.5", git = "https://github.com/jim-taylor-business/lemmy.git", default-features = false, package = "lemmy_api_common" }

leptos = "0"
leptos_actix = { version = "0", optional = true }
leptos_meta = "0"
leptos_router = "0"

# leptos = { branch = "main", git = "https://github.com/leptos-rs/leptos" }
# leptos_actix = { branch = "main", git = "https://github.com/leptos-rs/leptos", optional = true }
# leptos_meta = { branch = "main", git = "https://github.com/leptos-rs/leptos" }
# leptos_router = { branch = "main", git = "https://github.com/leptos-rs/leptos" }

# leptos_i18n = { version = "0", features = ["track_locale_files"] }
# leptos_i18n = { version = "0", features = ["track_locale_files"] }
# leptos_i18n = { path = "../leptos_i18n/leptos_i18n", optional = true }
leptos_i18n = { branch = "ssr_cookie_bugs", git = "https://github.com/jim-taylor-business/leptos_i18n.git", optional = true }
# leptos_i18n = { branch = "master", git = "https://github.com/Baptistemontan/leptos_i18n.git", optional = true }

leptos-use = { version = "0", optional = true }
# leptos-use = { path = "../leptos-use", optional = true }
# leptos-use = { branch = "main", git = "https://github.com/Synphonyte/leptos-use.git", optional = true }

send_wrapper = "0"

codee = "0"

serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0"
serde_json = "1"
# cfg-if = "1"
strum = "0"
strum_macros = "0"
web-sys = { version = "0", features = ["AbortController"] }

# pulldown-cmark = { branch = "deploy_demo", git = "https://github.com/jim-taylor-business/pulldown-cmark.git" }
pulldown-cmark = "0"

html-escape = "0"
pretty-duration = { branch = "main", git = "https://github.com/jim-taylor-business/pretty-duration.git" }

rexie = { version = "0", optional = true }
serde-wasm-bindgen = { version = "0", optional = true }

# dependencies for csr or hydrate features
# wasm-cookies = { version = "0", optional = true }
gloo-net = { version = "0", optional = true, features = ["http"] }
# chrono = { version = "0", optional = true }
chrono = "0"
# required for better debug messages
# specific version required for leptos wasm compatibility
wasm-bindgen = { version = "=0.2.100", optional = true }
console_error_panic_hook = { version = "0", optional = true }

# dependencies for ssr feature
actix-files = { version = "0", optional = true }
actix-web = { version = "4", features = ["macros"], optional = true }
actix-proxy = { version = "0", optional = true }
actix-http = { version = "3", optional = true }

# awc = { version = "3", optional = true }
reqwest = { version = "0", features = ["json"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.16.0", default-features = false, features = ["js"] }


[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "fr"]

[features]
default = ["ssr"]
hydrate = [
  "leptos/hydrate",
  # "leptos_meta/hydrate",
  # "leptos_router/hydrate",
  "leptos_i18n/hydrate",
  "leptos-use",
  "dep:wasm-bindgen",
  # "dep:wasm-cookies",
  "dep:console_error_panic_hook",
  "dep:gloo-net",
  # "dep:chrono",
  "rexie",
  "serde-wasm-bindgen",
]
csr = [
  "leptos/csr",
  # "leptos_meta/csr",
  # "leptos_router/csr",
  "leptos_i18n/csr",
  "leptos-use",
  "dep:wasm-bindgen",
  # "dep:wasm-cookies",
  "dep:console_error_panic_hook",
  "dep:gloo-net",
  # "dep:chrono",
  "rexie",
  "serde-wasm-bindgen",
]
ssr = [
  "leptos/ssr",
  # "leptos_meta/ssr",
  # "leptos_router/ssr",
  # "leptos_i18n/ssr",
  "leptos_i18n/actix",
  "leptos-use/ssr",
  "leptos-use/actix",
  "leptos_actix",
  "dep:actix-http",
  "dep:actix-web",
  "dep:actix-files",
  "dep:actix-proxy",
  # "dep:awc",
]

[package.metadata.cargo-all-features]
denylist = ["actix-files", "actix-web", "leptos_actix"]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]

[package.metadata.leptos]
output-name = "aos"
env = "DEV"
watch = false

bin-features = ["ssr"]
bin-default-features = false

lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

tailwind-input-file = "tailwind.css"
browserquery = "defaults"

site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
site-addr = "0.0.0.0:1237"
reload-port = 3001

end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
