[package]
name = "aos"
version = "0.19.13-aos-demo-alpha"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lemmy_api_common = { branch = "deploy_demo", git = "https://github.com/jim-taylor-business/lemmy.git", default-features = false }

leptos = { version = "0" }
leptos_meta = { version = "0" }
leptos_axum = { version = "0", optional = true }
leptos_router = { version = "0" }

# leptos_i18n = { version = "0", features = ["track_locale_files"] , optional = true }
leptos-use = { version = "0", optional = true }

serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0"
serde_json = "1"
strum = "0"
strum_macros = "0"
web-sys = { version = "0", features = ["AbortController", "AbortSignal"] }
pulldown-cmark = { branch = "deploy_demo", git = "https://github.com/jim-taylor-business/pulldown-cmark.git" }
html-escape = "0"
pretty-duration = { branch = "main", git = "https://github.com/jim-taylor-business/pretty-duration.git" }
chrono = "0"
thiserror = "2"
uuid = { version = "1", default-features = false, features = ["js"] }

gloo-net = { version = "0", optional = true, features = ["http"] }
console_error_panic_hook = { version = "0", optional = true }
rexie = { branch = "deploy_demo", git = "https://github.com/jim-taylor-business/rexie.git", optional = true }
serde-wasm-bindgen = { version = "0", optional = true }
wasm-bindgen = { version = "0", optional = true }

http = "1"
axum = { version = "0", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
tower = { version = "0", optional = true }
tower-http = { version = "0", features = ["fs"], optional = true }
tracing = { version = "0", optional = true }
send_wrapper = { version = "0", features = ["futures"] }
reqwest = { version = "0", features = ["json"] }
awc = { version = "3", features = ["openssl"], optional = true }

[features]
default = ["csr"]
csr = [
  "leptos/csr",
  # "leptos_i18n/csr",
  "leptos-use",
  "dep:wasm-bindgen",
  "dep:console_error_panic_hook",
  "dep:gloo-net",
  "rexie",
  "serde-wasm-bindgen",
]
hydrate = [
  "leptos/hydrate",
  # "leptos_i18n/hydrate",
  "leptos-use",
  "dep:wasm-bindgen",
  "dep:console_error_panic_hook",
  "dep:gloo-net",
  "rexie",
  "serde-wasm-bindgen",
]
ssr = [
  "dep:axum",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:leptos_axum",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:tracing",
  # "leptos_i18n/axum",
  "leptos-use/ssr",
  "leptos-use/axum",
  "dep:awc",
]

[profile.release]
opt-level = 3
lto = true

[profile.wasm-release]
inherits = "release"
opt-level = 3
lto = true

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "fr"]

[package.metadata.cargo-all-features]
denylist = ["axum", "tokio", "tower", "tower-http", "leptos_axum"]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"], []]

[package.metadata.leptos]
output-name = "aos"
site-root = "target/site"
site-pkg-dir = "pkg"
tailwind-input-file = "input.css"
assets-dir = "public"
site-addr = "127.0.0.1:1237"
reload-port = 3001
browserquery = "defaults"
watch = false
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
